<resources>
    <string name="app_name">Hidroponia</string>
    <string name="app_cadastrar">Cadastrar</string>
    <string name="app_login">Login</string>
    <string name="app_contatos">Contatos</string>
    <string name="app_update">Atualização</string>

    <string name="email">E-Mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="register">Não Possui uma Conta? Comece Agora!</string>

    <string name="user">Usuário</string>
    <string name="confirmPassword">Confirme a Senha</string>
    <string name="emptyUsername">É necessário informar um nome de Usuário!</string>
    <string name="emptyEmail">É necessário informar um endereço de E-mail!</string>
    <string name="emptyPassword">É necessário informar uma Senha!</string>
    <string name="unconfirmedPassword">É necessário confirmar a sua Senha!</string>
    <string name="invalidEmail">Endereço de E-mail inválido!</string>
    <string name="unmatchedPassword">As senhas não coincidem!</string>
    <string name="invalidPasswordLength">A senha precisa ter no mínimo 6 caracteres!</string>

    <string name="cb_termos">Aceito e concordo com os</string>
    <string name="cb_termos2">Termos de Uso</string>
    <string name="cadastrar">Criar Conta</string>
    <string name="bt_image">Foto</string>

    <string name="conversas">Conversas</string>
    <string name="contatos">Contatos</string>

    <string name="update">Atualizar</string>
    <string name="logout">Sair</string>

    <string name="send">Enviar</string>
    <string name="et_msg">Digite a mensagem...</string>
    <string name="et_publish">Compartilhe algo...</string>

    <string name="checkUpdates">Buscando atualizações...</string>
    <string name="newUpdate">Nova atualização encontrada!</string>
    <string name="currentVersion">Versão Atual:</string>
    <string name="lastVersion">Versão Disponível:</string>
    <string name="updated">Não há novas atualizações!</string>

    <!-- TODO Renomear Strings de Roles -->
    <string name="role_staff">Staff</string>
    <string name="role_farm">Farm</string>
    <string name="role_sale">Sale</string>
    <string name="role_organic">Organic</string>
    <string name="role_store">Store</string>
    <string name="role_default">Visitante</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cancel">Cancelar</string>
    <string name="next">Continuar</string>
    <string name="finish">Concluir</string>

    <string name="emptyField">Campo vazio!</string>

    <!-- TODO Refatorar Strings das telas de Joins -->
    <string name="join">Iniciar!</string>
    <string name="meuNegocio">Meu Negócio</string>
    <string name="minhaHorta">Minha Horta</string>
    <string name="publish">Publicar</string>
    <string name="panel">Painel</string>
    <string name="joinTitle2">Qual o seu Perfil?</string>
    <string name="joinTitle3">Qual finalidade?</string>
    <string name="joinTitle4">Qual tipo de comércio?</string>
    <string name="joinTitle5">Informe seus dados</string>
    <string name="joinTitle6">Informe os dados do seu negócio</string>
    <string name="choice">Escolha uma opção para prosseguir...</string>
    <!-- TODO Strings Perfil Join -->
    <string name="home">Blá blá blá Casa</string>
    <string name="business">Blá blá blá Hortifruti</string>
    <string name="farm">Blá blá blá Farm</string>
    <string name="sale">Blá blá blá Sale</string>
    <string name="organic">Blá blá blá Organic</string>
    <string name="store">Blá blá blá Store</string>

    <string name="fullName">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="phone">Telefone</string>
    <string name="nasc">Data de nascimento</string>
    <string name="address">Endereço</string>
    <string name="addressNumber">Número</string>
    <string name="cep">CEP</string>

    <string name="razao">Razão social</string>
    <string name="cnpj">CNPJ</string>

    <string name="dados">Dados</string>
    <string name="changeUsername">Alterar nome de usuário</string>
    <string name="changePassword">Alterar Senha</string>
    <string name="currentPassword">Senha atual</string>
    <string name="newPassword">Nova senha</string>
    <string name="invalidPassword">Senha incorreta!</string>
    <string name="changeDados">Alterar Dados</string>
    <string name="changeImageSuccess">Imagem alterada com sucesso!</string>
    <string name="changeUsernameSuccess">Nome de usuário alterado com sucesso!</string>
    <string name="changePasswordSuccess">Senha alterada com sucesso!</string>
    <string name="deleteAccount">Excluir Conta</string>
    <string name="deleteAccountConfirm">Tem certeza que deseja excluir a conta?\nEssa ação é irreversível!</string>

    <string name="publishSuccess">Publicado com sucesso!</string>
    <string name="deletedUser">Usuário deletado</string>

    <string name="reconnecting">Reconectando...</string>
</resources>
