<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Join">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/joinTitle5"
        android:gravity="center"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etName"
            android:inputType="textPersonName"
            android:hint="@string/fullName"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etNasc"
            android:inputType="date"
            android:hint="@string/nasc"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etCpf"
            android:inputType="numberDecimal"
            android:hint="@string/cpf"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etPhone"
            android:inputType="phone"
            android:hint="@string/phone"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etAddress"
            android:inputType="textPostalAddress"
            android:hint="@string/address"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etAddressNumber"
            android:inputType="numberDecimal"
            android:hint="@string/addressNumber"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etCep"
            android:inputType="numberDecimal"
            android:hint="@string/cep"/>

        <Button
            style="@style/Button"
            android:id="@+id/btCadastrar"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/finish"
            android:onClick="finishPF"
            android:background="@drawable/bg_button"/>
    </LinearLayout>

</ScrollView>