<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Cadastrar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp">
            <Button
                style="@style/Button"
                android:id="@+id/btImage"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:background="@drawable/bg_image_button"
                android:text="@string/bt_image"
                android:textSize="20sp"
                android:onClick="imagem"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivImage"
                android:layout_width="148dp"
                android:layout_height="148dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/colorButton"/>
        </RelativeLayout>

        <EditText
            style="@style/EditText"
            android:id="@+id/etUser"
            android:inputType="textPersonName"
            android:hint="@string/user"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <EditText
            style="@style/EditText"
            android:id="@+id/etPasswordConfirm"
            android:inputType="textPassword"
            android:hint="@string/passwordConfirm"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp">
            <CheckBox
                android:id="@+id/cbTermos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_termos"
                android:textColor="#606060"
                android:onClick="termos"/>
        </LinearLayout>

        <Button
            style="@style/Button"
            android:id="@+id/btCadastrar"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/cadastrar"
            android:onClick="cadastrar"
            android:clickable="false"
            android:background="@drawable/bg_buttondisabled"/>
    </LinearLayout>
</ScrollView>