<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Update"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:indeterminate="true"/>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkUpdates"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newUpdate"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                style="@style/text"
                android:text="@string/currentVersion"/>
            <TextView
                style="@style/subText"
                android:id="@+id/tvCurrentVersion"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                style="@style/text"
                android:text="@string/lastVersion"/>
            <TextView
                style="@style/subText"
                android:id="@+id/tvLastVersion"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/subText"
                android:id="@+id/tvChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"/>
        </ScrollView>

        <Button
            style="@style/Button"
            android:text="@string/update"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:onClick="download"/>

    </LinearLayout>

</LinearLayout>