<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Join">

    <ImageView
        android:id="@+id/waveTop"
        android:src="@drawable/wave_1t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleX="1.1"/>

    <ImageView
        android:id="@+id/waveBottom"
        android:src="@drawable/wave_1b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleX="1.1"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/waveTop"
        android:layout_above="@id/waveBottom"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joinTitle4"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivOrganic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/organic_disabled"
                android:onClick="organic"/>
            <ImageView
                android:id="@+id/ivStore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/store_disabled"
                android:onClick="store"/>
        </LinearLayout>

        <TextView
            style="@style/text"
            android:id="@+id/tvJoin4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorSubText"
            android:text="@string/choice"/>
    </LinearLayout>

    <Button
        style="@style/Button"
        android:id="@+id/btJoin4"
        android:layout_width="wrap_content"
        android:minWidth="160dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/waveBottom"
        android:layout_alignParentRight="true"
        android:text="@string/next"
        android:onClick="join4"
        android:clickable="false"
        android:visibility="invisible"/>

</RelativeLayout>